skeplib/tests/fixtures/sema/valid/short_circuit_bool_exprs.sk
fn main() -> Int {
  if (false && ((1 / 0) == 0)) {
    return 1;
  }
  if (true || ((1 / 0) == 0)) {
    return 0;
  }
  return 2;
}
