skeplib/tests/fixtures/sema/invalid/unary_plus_bool.sk
fn main() -> Int {
  let x = +true;
  return 0;
}
